@@ -1,3 +1,11 @@
+1999-08-09  Mark Mitchell  <mark@codesourcery.com>
+
+	* elflink.h (elf_link_size_reloc_section): Use the counts in the
+	elf-section data to allocate just the right amount of relocation
+	space.  Don't allocate the hash space twice.
+	(elf_bfd_final_link): Calculate the amount of space to allocate in
+	each relocation section.
+
 Mon Aug  9 17:37:30 1999  Jeffrey A Law  (law@cygnus.com)
 
 	* elf-hppa.h (_bfd_elf_hppa_gen_reloc_type, case 32): When in
@@ -12,7 +20,7 @@ Mon Aug  9 17:37:30 1999  Jeffrey A Law  (law@cygnus.com)
 	* elf32-mips.c (elf_mips_howto_table): Fix src_mask for
 	R_MIPS_GOT16 and R_MIPS_CALL16.
 	(mips_elf_got16_entry): Use mips_elf_high to calculate the value
-	to use wheen looking for a preexisting GOT entry.
+	to use when looking for a preexisting GOT entry.
 
 1999-08-09  Jakub Jelinek  <jj@ultra.linux.cz>
 
